--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -2,9 +2,26 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>List of Owners</title>
+    <title>List of Pet Owners</title>
 </head>
 <body>
+<!--/*@thymesVar id="owner" type="mel.springframework.sfpetclinic.model.Owner"*/-->
 <h1 th:text="'List of Owners'">List of Owners</h1>
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="owner : ${owners}">
+    <td th:text="${owner.id}">1</td>
+        <td th:text="${owner.firstName}">Joe</td>
+        <td th:text="${owner.firstName}">Buck</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
