--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>List of Pet Owners</title>
 </head>
 <body>
-<!--/*@thymesVar id="owner" type="mel.springframework.sfpetclinic.model.Owner"*/-->
+<!--/*@thymesVar id="owner" type="mel.springframework.sfgpetclinic.model.Owner"*/-->
 <h2 th:text="'List of Owners'">Owners List</h2>
 
 <table class="table table-striped">
